--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@astrojs/check": "^0.8.3",
     "astro": "^4.12.3",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "sass": "^1.77.8"
   }
 }
