--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.8.3",
+    "@fontsource-variable/source-code-pro": "^5.0.20",
+    "@fontsource/ubuntu": "^5.0.14",
     "astro": "^4.12.3",
     "typescript": "^5.5.4"
   },
